--- a/apisher.cabal
+++ b/apisher.cabal
@@ -6,7 +6,9 @@ cabal-version: 2.2
 
 name:           apisher
 version:        0.1.0.0
+synopsis:       Library for fast creation you light-weight TCP-based server API
 description:    Please see the README on GitHub at <https://github.com/githubuser/apisher#readme>
+category:       Web
 homepage:       https://github.com/Ordluks/apisher#readme
 bug-reports:    https://github.com/Ordluks/apisher/issues
 author:         Ordluks
@@ -38,7 +40,6 @@ library
     , bytestring
     , cereal >=0.5.8.3
     , network >=3.1.4.0
-    , network-run >=0.2.8
   default-language: Haskell2010
 
 test-suite apisher-test
@@ -56,4 +57,8 @@ test-suite apisher-test
     , base >=4.7 && <5
     , bytestring
     , cereal >=0.5.8.3
+    , network >=3.1.4.0
+    , network-run
+    , tasty
+    , tasty-hunit
   default-language: Haskell2010
