--- a/package.yaml
+++ b/package.yaml
@@ -11,8 +11,8 @@ extra-source-files:
 - CHANGELOG.md
 
 # Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
+synopsis:            Library for fast creation you light-weight TCP-based server API
+category:            Web
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
@@ -21,6 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- network >= 3.1.4.0
+- cereal >= 0.5.8.3
+- bytestring
 
 ghc-options:
 - -Wall
@@ -34,11 +37,6 @@ ghc-options:
 - -Wredundant-constraints
 
 library:
-  dependencies:
-  - network >= 3.1.4.0
-  - network-run >= 0.2.8
-  - cereal >= 0.5.8.3
-  - bytestring
   source-dirs: src
 
 tests:
@@ -50,6 +48,7 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - tasty
+    - tasty-hunit
     - apisher
-    - cereal >= 0.5.8.3
-    - bytestring
+    - network-run
