--- a/apisher.cabal
+++ b/apisher.cabal
@@ -7,7 +7,7 @@ cabal-version: 2.2
 name:           apisher
 version:        0.1.0.0
 synopsis:       Library for fast creation you light-weight TCP-based server API
-description:    Please see the README on GitHub at <https://github.com/githubuser/apisher#readme>
+description:    Please see the README on GitHub at <https://github.com/Ordluks/apisher#readme>
 category:       Web
 homepage:       https://github.com/Ordluks/apisher#readme
 bug-reports:    https://github.com/Ordluks/apisher/issues
