--- a/apisher.cabal
+++ b/apisher.cabal
@@ -40,6 +40,25 @@ library
     , bytestring
     , cereal >=0.5.8.3
     , network >=3.1.4.0
+    , network-run
+  default-language: Haskell2010
+
+executable apisher-example
+  main-is: Main.hs
+  other-modules:
+      Paths_apisher
+  autogen-modules:
+      Paths_apisher
+  hs-source-dirs:
+      example
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  build-depends:
+      apisher
+    , base >=4.7 && <5
+    , bytestring
+    , cereal >=0.5.8.3
+    , network >=3.1.4.0
+    , network-run
   default-language: Haskell2010
 
 test-suite apisher-test
